# internal/application/api/request/products_bulk.go
@@ -1,0 +1,6 @@
+package request
+
+type ProductRequest struct {
+	Name     string `json:"name"`
+	Producer string `json:"producer"`
+}
