# internal/application/api/response/product_bulk.go
@@ -1,0 +1,6 @@
+package response
+
+type ProductsBulkAddResponse struct {
+	ProductsAdded int      `json:"productsAdded"`
+	ProductIds    []string `json:"productIds"`
+}
