# internal/application/controller/product.go
@@ -7,6 +7,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+func (c Controller) BulkAdd(ctx *gin.Context) {
+	ctx.JSON(http.StatusCreated, response.ProductsBulkAddResponse{})
+}
+
 func (c Controller) GetProducts(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, response.ProductResponse{})
 }
